src/objects/SFDC_Project_Team__c.object
<CustomObject>
    <description>Team members</description>
    <fields>
        <fullName>Project_Members__c</fullName>
        <inlineHelpText>Members currently working on this project.</inlineHelpText>
        <label>Project Members</label>
        <picklist>
            <picklistValues>
                <fullName>Alex Lopez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashley Thomas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darien Allen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devin McDonald</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeremy Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Fenton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karl Taborda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kirk Keshishian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Cerminaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monica Cuesta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quinn Konieczka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rachel Bauchman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rory O&apos;Connell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanaa Kholfi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila Kohlhepp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila Mensah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tony Brown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Team_Name__c</fullName>
        <description>Team Name</description>
        <label>Project Team Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipName>R00N70000001v2ZWEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Team</label>
    <nameField>
        <displayFormat>Team - {0000}</displayFormat>
        <label>Project Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>